# mark-on-doubleclick

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  SECURITY.md
assets/: README-assets.md
data/: org-gnome-mark-on-doubleclick.eplug.in
debian/: changelog  control  rules
scripts/: install.sh  uninstall.sh
src/: mark_on_doubleclick_eplugin.c
